IVYPORTAL-17898 Apdat case owner in Portal - handle display with multiple owner